--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="menu-container">
-        <a href="" class="logo"><span>MY-</span>GAME</a>
+        <a href="./" class="logo"><span>MY-</span>GAME</a>
 
         <nav class="menu-nav--container">
           <a href="#">ABOUT</a>
@@ -29,5 +29,11 @@
         <a href="/" class="login-button">LOG IN</a>
       </div>
     </header>
+
+    <section class="hero-wrapper">
+      <div class="hero-container">
+        <h1 class="title">KNOW ALL ABOUT YOUR FAVORITE GAME</h1>
+      </div>
+    </section>
   </body>
 </html>
